--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -849,41 +849,47 @@ button {
         flex-grow: 1;
         font-size: 18px;
         gap: 10px;
+        border: 1px solid red;
     }
-        .people-component .details .title {
-            font-size: 30px;
-            padding-bottom: 10px;
+        .people-component .details .top {
         }
-        .people-component .details .info {
-            display: flex;
-            gap: 6px;
-        }
-            .people-component .details .info .one {
-                color: var(--textSub1);
+            .people-component .details .top .title {
+                font-size: 30px;
+                padding-bottom: 10px;
             }
-            .people-component .details .info .two {
-                color: var(--textMain);
+            .people-component .details .top .info {
+                display: flex;
+                gap: 6px;
             }
-        .people-component .details .trainings {
-            padding: 0 10px;
-            display: flex;
-            flex-direction: column;
-        }
-            .people-component .details .trainings .training {
-                border-bottom: 1px solid var(--gray4);
-                margin-top: 5px;
-                font-size: 15px;
-                border-radius: 3px;
-                padding: 2px 5px;
+                .people-component .details .top .info .one {
+                    color: var(--textSub1);
+                }
+                .people-component .details .top .info .two {
+                    color: var(--textMain);
+                }
+            .people-component .details .top .trainings {
+                padding: 0 10px;
+                display: flex;
+                flex-direction: column;
             }
-        .people-component .details .btn {
-            margin-top: 45%;
-            align-self: flex-end;
-            justify-self: flex-end;
-            padding: 2px;
-            width: 150px;
-            font-size: 17px;
+                .people-component .details .top .trainings .training {
+                    border-bottom: 1px solid var(--gray4);
+                    margin-top: 5px;
+                    font-size: 15px;
+                    border-radius: 3px;
+                    padding: 2px 5px;
+                }
+
+        .people-component .details .bottom {
         }
+
+            .people-component .details .bottom .btn {
+                align-self: flex-end;
+                padding: 2px;
+                width: 150px;
+                font-size: 17px;
+            }
+
 .hidden {    
     display: none;
 }
@@ -893,3 +899,36 @@ button {
     border-color: var(--gray4);
     padding: 3px;
 }
+
+.account-links {
+    margin-bottom: 50px;
+}
+    .account-links ul {
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+    }
+        .account-links ul li {
+            display: flex;
+        }
+            .account-links ul li a {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                margin-right: 5px;
+                align-items: center;
+                text-decoration: none;
+                color: var(--textMain);
+                justify-content: center;
+                border: 1px solid var(--gray4);
+                background-color: var(--gray2);
+                user-select: none;
+                padding: 2px 10px;
+            }
+                .account-links ul li a:hover {
+                    border: 1px solid gray;
+                }
+                .account-links ul li a:active {
+                    background-color: var(--gray4);
+                    border: 1px solid white;
+                }
