user account pages styling

--- a/WCSTrainer/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/WCSTrainer/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -15,9 +15,13 @@
     <div class="body">
         <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
         <div class="properties">
-            <div>
-                <partial name="_ManageNav" />
-                @RenderBody()
+            <div class="identity-container">
+                <div class="top">
+                    <partial name="_ManageNav" />
+                </div>
+                <div class="content">
+                    @RenderBody()
+                </div>
             </div>
         </div>
     </div>
