--- a/WCSTrainer/Pages/Index.cshtml
+++ b/WCSTrainer/Pages/Index.cshtml
@@ -3,3 +3,29 @@
 @{
     ViewData["Title"] = "Home";
 }
+
+@using Microsoft.AspNetCore.Identity
+@using WCSTrainer.Models
+
+@inject SignInManager<UserAccount> SignInManager
+@inject UserManager<UserAccount> UserManager
+
+<div class="main-banner">
+    <div class="banner-container">
+        <div class="right">
+            <div class="info">
+                <p>Manage and Organize Work Training</p>
+                @if (SignInManager.IsSignedIn(User)) {
+                    <a asp-page="/TrainingOrders/Index" class="btn">Start Here</a>
+                } else {
+                    <a id="login" asp-area="Identity" asp-page="/Account/Login" class="btn">Start Here</a>
+                }
+            </div>
+        </div>
+        <div class="left">
+            <div class="image">
+                <img src="images/1N.png" alt="Sample Photo" />
+            </div>
+        </div>
+    </div>
+</div>
