--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -844,14 +844,16 @@ button {
         }
     .people-component .details {
         padding: 20px;
+        flex-grow: 1;
         display: flex;
         flex-direction: column;
-        flex-grow: 1;
-        font-size: 18px;
-        gap: 10px;
-        border: 1px solid red;
     }
         .people-component .details .top {
+            display: flex;
+            flex-direction: column;
+            font-size: 18px;
+            gap: 10px;
+            border: 1px solid red;
         }
             .people-component .details .top .title {
                 font-size: 30px;
@@ -879,10 +881,10 @@ button {
                     border-radius: 3px;
                     padding: 2px 5px;
                 }
-
         .people-component .details .bottom {
+            border: 1px solid red;
+            height: 10%;
         }
-
             .people-component .details .bottom .btn {
                 align-self: flex-end;
                 padding: 2px;
@@ -899,7 +901,6 @@ button {
     border-color: var(--gray4);
     padding: 3px;
 }
-
 .account-links {
     margin-bottom: 50px;
 }
@@ -932,3 +933,103 @@ button {
                     background-color: var(--gray4);
                     border: 1px solid white;
                 }
+
+.main-banner {
+    background-image: linear-gradient(to bottom right, #135868,#172a3d);
+    background-color: black;
+    display: flex;
+    width: 100vw;
+    justify-content: center;
+    height: 500px;
+}
+    .main-banner .banner-container {
+        width: 1400px;
+        display: flex;
+        justify-content: center;
+        height: 500px;
+    }
+        .main-banner .banner-container .right {
+            display: flex;
+            align-items: center;
+            width: 50%;
+        }
+            .main-banner .banner-container .right .info {
+                display: flex;
+                flex-direction: column;
+                height: 300px;
+                width: 600px;
+                gap: 50px;
+
+            }
+                .main-banner .banner-container .right .info p {
+                    font-size: 50px;
+                    font-weight: bold;
+                    text-shadow: 2px 2px 10px black;
+                }
+                .main-banner .banner-container .right .info .btn {
+                    color: black;
+                    font-weight: bold;
+                    background-color: #21c9ef;
+                    width: 200px;
+                    justify-self: flex-end;
+                    padding: 10px;
+                    box-shadow: 2px 2px 5px black;
+                }
+
+                    .main-banner .banner-container .right .info .btn:hover {
+                        background-color: #cff6ff;
+                    }
+
+        .main-banner .banner-container .left {
+            width: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+            .main-banner .banner-container .left .image {
+            }
+                .main-banner .banner-container .left .image img {
+                    user-select: none;
+                    height: 300px;
+                    box-shadow: 5px 5px 20px black;
+                    rotate: 3deg;
+                }
+
+.identity-container {
+    width: 100%;
+    color: white;
+    flex-direction: column;
+}
+
+    .identity-container .top {
+    }
+
+    .identity-container .content {
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        max-width: 100%;
+        width: 100%;
+        font-size: 15px;
+        gap: 10px;
+    }
+
+        .identity-container .content form {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .identity-container .content input {
+            display: flex;
+            flex-direction: column;
+            height: 25px;
+            width: 300px;
+        }
+
+        .identity-container .content a, button {
+            color: lightblue;
+        }
+
+
+
