--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -916,22 +916,22 @@ button {
                 width: 100%;
                 height: 100%;
                 display: flex;
-                margin-right: 5px;
                 align-items: center;
                 text-decoration: none;
                 color: var(--textMain);
                 justify-content: center;
-                border: 1px solid var(--gray4);
-                background-color: var(--gray2);
+                border-bottom: 1px solid var(--gray4);
+                margin-right: 2px;
                 user-select: none;
                 padding: 2px 10px;
             }
                 .account-links ul li a:hover {
-                    border: 1px solid gray;
+                    border-bottom: 1px solid white;
+                    background-color: var(--gray3);
+                    
                 }
                 .account-links ul li a:active {
                     background-color: var(--gray4);
-                    border: 1px solid white;
                 }
 
 .main-banner {
