--- a/WCSTrainer/Pages/Components/People.razor
+++ b/WCSTrainer/Pages/Components/People.razor
@@ -42,6 +42,7 @@
         </div>
     </div>
 </div>
+
 <div class="details">
     <div class="top">
         <p class="title">Firstname Lastname</p>
@@ -62,14 +63,15 @@
             <p class="training">Order #197 -+- 11 Hours</p>
             <p class="training">Order #233 -+- 24 Hours</p>
         </div>
+        <div class="info">
+            <p class="one">Total Assigned Hours:</p>
+            <p class="two">92 Hours</p>
+        </div>
     </div>
     
     <div class="bottom">
         <a class="btn btnBlue bg-btn">Add Trainer</a>
     </div>
-    
-
-    
 </div>
 
 @code {
