--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -17,7 +17,6 @@
     --yellow1: #fff764;
     --yellow2: #d8ce13;
 }
-
 .light-mode {
     --black: #dcd7c7;
     --gray1: #c8c4b6;
@@ -104,7 +103,6 @@ nav {
                 height: 100%;
                 font-size: 15px;
             }
-
 html {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     min-width: 100%;
@@ -853,7 +851,7 @@ button {
             flex-direction: column;
             font-size: 18px;
             gap: 10px;
-            border: 1px solid red;
+            flex-grow: 1;
         }
             .people-component .details .top .title {
                 font-size: 30px;
@@ -882,8 +880,10 @@ button {
                     padding: 2px 5px;
                 }
         .people-component .details .bottom {
-            border: 1px solid red;
-            height: 10%;
+            align-items: flex-end;
+            display: flex;
+            justify-content: flex-end;
+            flex-grow: 1;
         }
             .people-component .details .bottom .btn {
                 align-self: flex-end;
@@ -959,12 +959,12 @@ button {
                 height: 300px;
                 width: 600px;
                 gap: 50px;
-
             }
                 .main-banner .banner-container .right .info p {
                     font-size: 50px;
                     font-weight: bold;
                     text-shadow: 2px 2px 10px black;
+                    user-select: none;
                 }
                 .main-banner .banner-container .right .info .btn {
                     color: black;
