--- a/WCSTrainer/Pages/Components/People.razor
+++ b/WCSTrainer/Pages/Components/People.razor
@@ -1,4 +1,5 @@
-﻿<div class="people-container">
+﻿
+<div class="people-container">
     <div class="search">
         <input type="search" placeholder="Search By Name" @bind="searchText" />
     </div>
@@ -61,7 +62,6 @@
             <p class="training">Order #183 -+- 22 Hours</p>
             <p class="training">Order #162 -+- 36 Hours</p>
             <p class="training">Order #197 -+- 11 Hours</p>
-            <p class="training">Order #233 -+- 24 Hours</p>
         </div>
         <div class="info">
             <p class="one">Total Assigned Hours:</p>
