--- a/WCSTrainer/Components/People.razor
+++ b/WCSTrainer/Components/People.razor
@@ -1,5 +1,4 @@
-﻿
-<div class="people-container">
+﻿<div class="people-container">
     <div class="search">
         <input type="search" placeholder="Search By Name" @bind="searchText" />
     </div>
