--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Edit";
 }
 
-@using WCSTrainer.Pages.Components
+@using WCSTrainer.Components
 
 <div id="people-component" class="people-component hidden">
     <component type="typeof(People)" render-mode="WebAssemblyPrerendered" param-Employees="Model.Employees" param-addTrainees="false" />
