--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
 }
 
-@using WCSTrainer.Pages.Components
+@using WCSTrainer.Components
 
 <section class="modal hidden">
     <div class="one">
