--- a/WCSTrainer/Pages/Employees/Details.cshtml
+++ b/WCSTrainer/Pages/Employees/Details.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Details";
 }
-@using WCSTrainer.Pages.Components
+@using WCSTrainer.Components
 
 <div class="panel">
     <div class="body">
