--- a/WCSTrainer/Pages/Employees/Edit.cshtml
+++ b/WCSTrainer/Pages/Employees/Edit.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Edit";
 }
-@using WCSTrainer.Pages.Components
+@using WCSTrainer.Components
 <div class="panel">
     <div class="body">
         <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
