--- a/WCSTrainer/Pages/Employees/Index.cshtml
+++ b/WCSTrainer/Pages/Employees/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
 }
 
-@using WCSTrainer.Pages.Components
+@using WCSTrainer.Components
 
 <div class="panel">
     <div class="body">
