--- a/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "AllView";
 }
 
-@using WCSTrainer.Pages.Components
+@using WCSTrainer.Components
 
 <div class="panel">
     <div class="body">
