--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Approval";
 }
 
-@using WCSTrainer.Pages.Components
+@using WCSTrainer.Components
 
 <div class="panel">
     <div class="body">
