--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Create";
 }
 
-@using WCSTrainer.Pages.Components
+@using WCSTrainer.Components
 
 <div class="panel">
     <div class="body">
