--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -58,7 +58,7 @@ nav {
         align-items: center;
         justify-content: space-between;
         width: 1500px;
-        max-width: 90%;
+        max-width: 95%;
     }
         nav .nav-container .nav-buttons {
             width: 50%;
@@ -121,7 +121,7 @@ body {
     align-items: center;
     flex-direction: column;
     width: 1500px;
-    max-width: 90%;
+    max-width: 95%;
 }
 .maintitle {
     margin-top: 100px;
@@ -135,8 +135,8 @@ body {
 }
 
 /*--------------------------------------------------------
-                       MAIN PANEL                       
---------------------------------------------------------*/
+                       MAIN PANEL                         
+--------------------------------------------------------*/ 
 
 .panel {
     display: flex;
@@ -148,12 +148,12 @@ body {
         height: 100%;
         width: 100%;
         min-height: 800px;
+        gap: 30px;
     }
         .panel .body .side-bar {
             display: flex;
             flex-direction: column;
-            width: 250px;
-            min-width: 150px;
+            min-width: 250px;
         }
             .panel .body .side-bar ul {
                 display: flex;
@@ -177,11 +177,11 @@ body {
                 background-color: var(--gray3);
             }
         .panel .body .properties {
-            padding: 10px 40px;
             display: flex;
             flex-direction: row;
-            width: 80%;
+            flex-grow: 1;
             justify-content: space-between;
+            gap: 30px;
         }
             .panel .body .properties .user-form {
                 display: flex;
@@ -224,6 +224,7 @@ body {
                     width: 45%;
                     gap: 20px;
                     margin-bottom: 20px;
+                    
                 }
                     .panel .body .properties .user-form .field-container .form-group .form {
                         width: 100%;
@@ -318,15 +319,15 @@ body {
                     padding: 5px 0;
                     width: 100%;
                     max-width: 800px;
-                    border-bottom: 1px solid var(--gray4);
+                    border-bottom: 1px solid var(--gray3);
                 }
                     .panel .body .properties .user-form .field-container .text-group .identifier {
                         height: 100%;
-                        width: 40%;
+                        width: 200px;
                     }
                     .panel .body .properties .user-form .field-container .text-group .info-content {
                         height: 100%;
-                        width: 60%;
+                        flex-grow: 1;
                     }
                     .panel .body .properties .user-form .field-container .text-group .title {
                         color: var(--textSub1);
@@ -338,10 +339,8 @@ body {
                         font-size: 18px;
                     }
             .panel .body .properties .tool-container {
-                margin-left: 30px;
                 display: flex;
-                min-width: 20%;
-                width: 270px;
+                min-width: 270px;
             }
                 .panel .body .properties .tool-container .section-title {
                     font-size: 15px;
@@ -424,8 +423,7 @@ body {
             .panel .body .properties .list-container {
                 display: flex;
                 flex-direction: column;
-                width: 70%;
-                max-height: 750px;
+                flex-grow: 1;
             }
                 .panel .body .properties .list-container .top {
                     border-bottom: 1px solid var(--gray4);
@@ -548,14 +546,15 @@ body {
                         color: var(--textMain);
                     }
             .panel .body .properties .scheduling {
-                width: 70%;
                 display: flex;
+                flex-grow: 1;
             }
                 .panel .body .properties .scheduling .schedule {
                     max-width: 100%;
                     display: flex;
                     flex-direction: column;
                     gap: 50px;
+                    align-items: center;
                 }
                     .panel .body .properties .scheduling .schedule .months {
                         width: 100%;
@@ -563,6 +562,7 @@ body {
                         align-content: flex-start;
                         gap: 10px;
                         flex-wrap: wrap;
+                        justify-content: center;
                     }
                         .panel .body .properties .scheduling .schedule .months .month {
                             width: 23%;
