--- a/WCSTrainer/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WCSTrainer/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,41 +1,35 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+<div class="login-container">
+    <p class="title">Register</p>
+    <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+    <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
 
-<div class="row">
-    <div class="col-lg-6 mx-auto rounded border p-3">
-        <h2 class="text-center mb-3">Register</h2>
-        <hr />
-        <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-           
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.EmployeeID" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.EmployeeID">Employee ID</label>
-                <span asp-validation-for="Input.EmployeeID" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.Password">Password</label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            
+        <div class="field">
+            <label class="label" asp-for="Input.Email">Email</label>
+            <span asp-validation-for="Input.Email" class="text-danger"></span>
+            <input asp-for="Input.Email" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+        </div>
+        <div class="field">
+            <label class="label" asp-for="Input.EmployeeID">Employee ID</label>
+            <span asp-validation-for="Input.EmployeeID" class="text-danger"></span>
+            <input asp-for="Input.EmployeeID" autocomplete="new-password" aria-required="true" placeholder="password" />
+        </div>
+        <div class="field">
+            <label class="label" asp-for="Input.Password">Password</label>
+            <span asp-validation-for="Input.Password" class="text-danger"></span>
+            <input asp-for="Input.Password" autocomplete="new-password" aria-required="true" placeholder="password" />
+        </div>
+        <div class="field">
+            <label class="label" asp-for="Input.ConfirmPassword">Confirm Password</label>
+            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            <input asp-for="Input.ConfirmPassword" autocomplete="new-password" aria-required="true" placeholder="password" />
+        </div>
+        <div class="login-btns">
             <button id="registerSubmit" type="submit" class="btn bg-btn btnWhite">Register</button>
-        </form>
-    </div>
+        </div>
+    </form>
 </div>
