--- a/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
@@ -27,11 +27,11 @@
                             
                             <div class="selector">
                                 <p>From</p>
-                                <input type="date" asp-for="TrainingOrder.@Model.From" class="form-control" />
+                                <input type="date" asp-for="@Model.From" class="form-control" />
                             </div>
                             <div class="selector">
                                 <p>To</p>
-                                <input type="date" asp-for="TrainingOrder.@Model.To" class="form-control" />
+                                <input type="date" asp-for="@Model.To" class="form-control" />
                             </div>
                             
                         </form>
