--- a/WCSTrainer/Pages/Shared/_Layout.cshtml
+++ b/WCSTrainer/Pages/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             <div class="nav-container">
                 <div class="nav-buttons">
                     <ul>
-                        <li class="main-title">WCS Trainer</li>
+                        <li class="main-title"><a>WCS Trainer</a></li>
                         <li><a asp-page="/Index">Home</a></li>
                         @if (SignInManager.IsSignedIn(User)) {
                             <li><a asp-page="/TrainingOrders/Index">My Panel</a></li>
